@@ -80,7 +80,7 @@ not	stats on SIGUSR1. perhaps also see which slow auth servers cause >1sec value
 * trouble counter, cache wipe threshold.
 
 + off-path validation
-* root NS, root glue validation after prime
++ root NS, root glue validation after prime
 * ignore bogus nameservers, pretend they always return a servfail.
 
 
